unpackaged/main/default/objects/ClientSourceFields__c/ClientSourceFields__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Client Source Fields</label>
</CustomObject>