unpackaged/main/default/objects/ClientSourceFields__c/fields/SourceCreationDate__c.field-meta.xml
<CustomField>
    <fullName>SourceCreationDate__c</fullName>
    <label>SourceCreationDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>