unpackaged/main/default/objects/ClientSourceFields__c/fields/SourceLastUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>SourceLastUpdateDate__c</fullName>
    <label>SourceLastUpdateDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>